fix jetpack loading spacing issue

--- a/style.css
+++ b/style.css
@@ -201,3 +201,6 @@ This theme is child theme of Stargazer parent theme.
     transition: all 0.5s ease-in-out 0s;
     font-family: "Open Sans",Arial,sans-serif;
 }
+.infinite-loader {
+    margin-bottom: 20px;
+}
